[package]
name = "configs-builder"
version = "0.0.1"
edition = "2024"

[dependencies]
configs = { git = "ssh://git@github.com/ruskit/configs.git", rev = "beta-v0.0.4" }
secrets-manager = { git = "ssh://git@github.com/ruskit/secrets_manager.git", rev = "v0.0.0" }
logging = { git = "ssh://git@github.com/ruskit/logging.git", rev = "beta-v0.0.2" }
metrics = { git = "ssh://git@github.com/ruskit/metrics.git", rev = "beta-v0.0.1" }
traces = { git = "ssh://git@github.com/ruskit/traces.git", rev = "beta-v0.0.0" }
otel = { git = "ssh://git@github.com/ruskit/otel.git", rev = "beta-v0.0.0" }

thiserror = { version = "2.0.12" }
tracing = { version = "0.1.41" }
dotenvy = { version = "0.15.7" }
base64 = { version = "0.22.1" }
serde_json = { version = "1.0.140" }